--- a/com.hybrid.nopcommerce/pom.xml
+++ b/com.hybrid.nopcommerce/pom.xml
@@ -153,6 +153,18 @@
 			<artifactId>lombok</artifactId>
 			<version>0.11.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.29</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.jtds/jtds -->
+		<dependency>
+		    <groupId>net.sourceforge.jtds</groupId>
+		    <artifactId>jtds</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
 		
 	</dependencies>
 
